--- a/src/assets/stylesheets/components/header-bikcraft.css
+++ b/src/assets/stylesheets/components/header-bikcraft.css
@@ -1,6 +1,6 @@
 #general-special {
     .header-bikcraft {
-        background-color: #000000;
+        background-color: var(--cor-c12);
     }
     .header-bg {
         display: flex;
@@ -8,11 +8,8 @@
         gap: 20px;
         justify-content: space-between;
         align-items: center;
-        box-sizing: border-box;
-        padding: 20px;
-        max-width: 1160px;
-        margin-left: auto;
-        margin-right: auto;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
     .header-menu {
         display: flex;
@@ -22,16 +19,15 @@
     .header-menu a {
         display: inline-block;
         padding: 16px 0px;
-        font-size: 18px;
-        color: #ffffff;
         position: relative;
+        color: var(--cor-c0);
     }
     .header-menu a:after{
         content: "";
         display: block;
         height: 2px;
         width: 0px;
-        background: #ffffff;
+        background: var(--cor-c0);
         margin-top: 4px;
         transition: 0.3s;
         position: absolute;
@@ -45,14 +41,14 @@
             gap: 20px;
         }
         .header-menu a {
-            background: #111111;
+            background: var(--cor-c11);
             padding: 12px 16px;
             border-radius: 4px;
-            color: #ffffff;
+            color: var(--cor-c0);
         }
 
         .header-menu a:hover{
-            background-color: #2E2E2E;
+            background-color: var(--cor-c10);
         }
         .header-menu a:after {
             display: none;
