--- a/src/assets/stylesheets/general/general.css
+++ b/src/assets/stylesheets/general/general.css
@@ -24,24 +24,23 @@ body {
         position: relative;
         z-index: 2;
     }
-
-    p {
-        font-family: 'Merriweather', serif;
-        font-size: 16px;
-        font-weight: normal;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 2;
-        letter-spacing: normal;
-        color: #000000;
-        margin-bottom: 0;
-
-        @media screen and (max-width: 768px) {
-            padding-left: 0;
-            padding-right: 0;
-        }
+    .container {
+        box-sizing: border-box;
+        max-width: 1200px;
+        padding-left: 20px;
+        padding-right: 20px;
+        margin-right: auto;
+        margin-left: auto;
+        
     }
+    img {
+        max-width: 100%;
+        display: block;
 
+    }
+    img[src$=".jpg"] {
+        border-radius: 4px;
+    }
     h4 {
         font-family: 'Merriweather', serif;
         font-size: 35px;
@@ -73,7 +72,26 @@ body {
         }
         
     }
-
+    .botao {
+        display: inline-block;
+        padding: 16px 32px;
+        background: linear-gradient(#ffbf00, #f2a50c);
+        border-radius: 4px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+        text-transform: uppercase;
+        color: var(--cor-p5);
+        font: 600 1.125rem/1.35 "Poppins", sans-serif;
+    }  
+    .botao:hover {
+        background: linear-gradient(#ffb60d, #e59317);
+    }
+    @media (max-width: 600px) {
+        .botao {
+            padding: 12px 16px;
+            font-size: 1rem;
+        }
+        
+    }  
     .block-image {
         padding: 20px 0 40px 0;
 
@@ -112,9 +130,6 @@ body {
             }
         }
 
-        img {
-            width: 100%;
-        }
 
     }
 
