--- a/src/assets/views/index.pug
+++ b/src/assets/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="pt-br")
   head
-    title Bikcraft - Bicicletas Elétricas
+    title Bikcraft - Bicicletas
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='description' content="meta desc")
@@ -45,7 +45,9 @@ html(lang="pt-br")
     link(href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i&display=swap" rel="stylesheet")
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;600&family=Roboto:wght@700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400&family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
     //- css do especial
     link(rel="stylesheet" href="assets/stylesheets/style.css")
@@ -60,9 +62,9 @@ html(lang="pt-br")
         
         include components/header.pug
 
-        include components/content.pug
+        include components/introducao.pug
 
-        include components/episodios.pug
+        include components/bicicletas.pug
 
         include components/galeria.pug
 
