--- a/src/assets/views/components/header.pug
+++ b/src/assets/views/components/header.pug
@@ -1,9 +1,12 @@
 section.header-bikcraft 
     .header-bg.container
-        <a href="index.html"><img src="assets/images/components/logo/bikcraft.svg"></a>
-
-        <nav area-label="primaria">
+        a(href="index.html")
+            img(src="assets/images/components/logo/bikcraft.svg")
+        nav(area-label="primaria")
             ul.header-menu.font-1-m.cor-c0
-                <li><a href="bicicletas.html">Bicicletas</a></li>
-                <li><a href="seguros.html">Seguros</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                li
+                    a(href="bicicletas.html") Bicicletas
+                li
+                    a(href="seguros.html") Seguros           
+                li
+                    a(href="contato.html") Contato
