--- a/src/assets/stylesheets/general/general.css
+++ b/src/assets/stylesheets/general/general.css
@@ -13,7 +13,6 @@ body {
 }
 
 #general-special {
-    font-family: 'Merriweather', serif;
     font-size: 16px;
     font-weight: normal;
     min-height: 100%;
@@ -81,10 +80,18 @@ body {
         text-transform: uppercase;
         color: var(--cor-p5);
         font: 600 1.125rem/1.35 "Poppins", sans-serif;
-    }  
+        max-width: max-content;
+    }
     .botao:hover {
         background: linear-gradient(#ffb60d, #e59317);
     }
+    .botao.secundaria {
+        background: var(--cor-c10);
+        color: var(--cor-c2);
+    } 
+    .botao.secundaria:hover {
+        background: var(--cor-c9);
+    } 
     @media (max-width: 600px) {
         .botao {
             padding: 12px 16px;
@@ -179,7 +186,7 @@ body {
             display: none;
         }
 
-    }
+    } 
 
 
     /*limpa tags que são inseridas pelo WP*/
@@ -199,6 +206,22 @@ body {
         padding: 0 20px;
         position: relative;
         z-index: 2;
+    }
+    .link {
+        display: inline-block;
+        color: var(--cor-p1);
+        font: 500 1.5rem/1.5 "Pappins", sans-serif;
+        text-transform: uppercase;
+        text-decoration: underline;
+    }
+    .link::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 4px;
+    }
+    .link:hover {
+        color: var(--cor-c0);
     }
 
 }
