--- a/src/assets/stylesheets/general/tipografia.css
+++ b/src/assets/stylesheets/general/tipografia.css
@@ -1,6 +1,9 @@
 .font-2-xs{
     font: 400 0.875rem/1.43 "Roboto", sans-serif;
 }
+.font-1-xs {
+    font: 400 0.75rem/1.35 "Poppins", sans-serif
+}
 .font-1-s{
     font: 400 1rem/1.5 "Poppins", sans-serif;
 }
