--- a/src/assets/views/index.pug
+++ b/src/assets/views/index.pug
@@ -54,10 +54,7 @@ html(lang="pt-br")
 
 
   body
-    script(type="text/javascript").
-        if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent))
-            document.body.classList.add('mobile');
-
+  
     #general-special
         
         include components/header.pug
@@ -66,9 +63,13 @@ html(lang="pt-br")
 
         include components/bicicletas.pug
 
-        include components/galeria.pug
+        include components/tecnologia.pug
 
-        include components/expediente.pug
+        include components/parceiros.pug
+
+        include components/depoimento.pug
+
+        include components/seguro.pug
 
     //- SCRIPTS
     script(src="https://code.jquery.com/jquery-3.0.0.min.js")
