--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -11,5 +11,6 @@
 @import 'components/tecnologia.css';
 @import 'components/parceiros.css';
 @import 'components/depoimento.css';
-@import 'components/seguro.css'
+@import 'components/seguro.css';
+@import 'components/footer.css'
 
