--- a/src/assets/views/index.pug
+++ b/src/assets/views/index.pug
@@ -71,6 +71,8 @@ html(lang="pt-br")
 
         include components/seguro.pug
 
+        include components/footer.pug
+
     //- SCRIPTS
     script(src="https://code.jquery.com/jquery-3.0.0.min.js")
     
