--- a/src/assets/views/components/footer.pug
+++ b/src/assets/views/components/footer.pug
@@ -2,9 +2,28 @@ footer.footer-bg
     .footer.container 
         img(src="assets/images/components/logo/bikcraft.svg")
         .footer-contato   
-            h3 Contato 
+            h3.font-2-l-b.cor-c0 Contato 
             ul.font-2-m
                 li 
                     a(href="tel:+5521999999999").cor-c5 +55 21 9999-9999 
                 li 
                     a(href="mailto:contato@bikcraft.com").cor-c5 contato@bikcraft.com
+                li.cor-c5 Rua Ali Perto, 42 - Botafogo 
+                li.cor-c5 Rio de Janeiro - RJ
+            .footer-redes  
+                img(src="assets/images/components/redes/instagram.svg", alt="")
+                img(src="assets/images/components/redes/facebook.svg", alt="")
+                img(src="assets/images/components/redes/youtube.svg", alt="")
+        .footer-informacoes     
+            h3.font-2-l-b.cor-c0 Informações 
+            nav 
+                ul.font-1-m.cor-c5
+                    li
+                        a(href="bicicletas.html").cor-c5 Bicicletas
+                    li
+                        a(href="seguros.html").cor-c5 Seguros           
+                    li
+                        a(href="contato.html").cor-c5 Contato
+                    li
+                        a(href="termos.html").cor-c5 Termos e Condições
+        p.footer-copy.font-2-m.cor-c6 Bikcraft © Alguns direitos reservados.
